--- a/webdesign/video/index.html
+++ b/webdesign/video/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> </title>
+	<title>Website with background video</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<div class="hero">
+		<div class="logo">
+			<img src=" images/logo.png">
+		</div>
+		<div class="sidebar">
+			<div class="text-box">
+				<h1>Golden Resort</h1>
+				<h4>Luxury Living</h4> 
+				<div class="line"></div>
+			</div> 
+		</div>
+		<div class="content">
+			<h1>Maldives</h1>
+			<p>Very nice appartments in the heart of Maldives</p>
+			<!-- youtube.com/watch?v=xekZXhumB0k : 6:16 --> 
+		</div> 
+	</div>
 </body>
 </html>
